Split hyprland.conf into sourced module files
hyprland.conf now contains only source directives. Config is distributed
across monitors, autostart, general, appearance, input, gestures, keys,
and rules modules with each section in its appropriate file.

--- a/hypr/modules/general.conf
+++ b/hypr/modules/general.conf
@@ -1,22 +1,27 @@
+### PROGRAM SHORTCUTS ###
+$terminal      = kitty
+$fileManager   = nautilus
+$menu          = vicinae toggle
+$browser       = firefox
+$clipboard     = clipse -e clipse
+$colorpicker   = hyprpicker -a
+$mainMod       = SUPER
+$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
+$notification  = swaync-client -t -sw
+$screenshot    = grim -g "$(slurp -d)" - | wl-copy
+$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
+$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
+$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
+
 general {
-    gaps_in = 5
-    gaps_out = 5
-    border_size = 0  # off in niri
-    col.active_border = rgba(707070ff)
-    col.inactive_border = rgba(d0d0d0ff)
-    layout = dwindle
-}
-
-
-dwindle {
-    pseudotile      = true
-    preserve_split  = true
-}
-
-master {
-    mfact      = 0.5
-    new_on_top = true
-    new_status = master
+    gaps_in             = 4
+    gaps_out            = 4
+    border_size         = 4
+    col.active_border   = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
+    allow_tearing       = false
+    resize_on_border    = true
+    layout              = dwindle
 }
 
 misc {
@@ -32,9 +37,18 @@ misc {
     focus_on_activate           = false
     enable_swallow              = true
     swallow_regex               = ^(Alacritty|kitty|footclient)$
-    disable_hyprland_logo       = true
-    disable_splash_rendering    = true
-    vrr                         = 1
 }
 
+cursor {
+    no_hardware_cursors = false
+}
 
+dwindle {
+    pseudotile      = true
+    preserve_split  = true
+}
+
+master {
+    new_on_top = true
+    new_status = master
+}
