--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -1,18 +1,4 @@
-# Variables
-$mainMod       = SUPER
-$terminal      = kitty
-$fileManager   = nautilus
-$browser       = firefox
-$menu          = vicinae toggle
-$clipboard     = kitty --class clipse -e clipse
-$colorpicker   = hyprpicker -a
-$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
-$notification  = swaync-client -t -sw
-$screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$shutdown      = wlogout
-$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
-$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
-$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
+### KEYBINDINGS ###
 
 # Application launchers and system actions
 bind = $mainMod, T, exec, $terminal
@@ -21,29 +7,25 @@ bind = $mainMod, L, exec, $lockscreen
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, G, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, Space, exec, vicinae toggle
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 bind = $mainMod, N, exec, $notification,
-bind = $mainMod, V, exec, $clipboard
-bind = $mainMod SHIFT, C, exec, $colorpicker
+bind = $mainMod, V, exec, $terminal --class $clipboard
+bind = $mainMod, C, exec, $colorpicker
+bind = $mainMod SHIFT, UP, fullscreenstate, 1
 bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
 bind = $mainMod CTRL SHIFT, S, exec, $screenshotocr
+bind = $mainMod SHIFT, A, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, B, exec, $externalscript1
-bind = $mainMod SHIFT, E, exec, $shutdown
 
-# utility
+# Utility
 bind = $mainMod SHIFT, V, exec, bash /home/ghost/.config/scripts/wayvnc-toggle.sh
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
-bind = $mainMod SHIFT, K, exec, bash -c "pkill mpv"
+bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
 bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
-
-
-
-bind = $mainMod, X, exec, wl-copy
-bind = $mainMod, V, exec, wl-paste
-
 
 # Focus movement
 bind = $mainMod CTRL, left, movefocus, l
@@ -52,7 +34,6 @@ bind = $mainMod CTRL, down, movefocus, d
 bind = $mainMod CTRL, up, movefocus, u
 bind = $mainMod, left, movewindow, l
 bind = $mainMod, right, movewindow, r
-
 bind = $mainMod, up, movewindow, u
 bind = $mainMod, down, movewindow, d
 
@@ -68,13 +49,13 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Enhanced multi-monitor workspace navigation
-bind = $mainMod, bracketleft, workspace, m-1    # Previous workspace on current monitor
-bind = $mainMod, bracketright, workspace, m+1   # Next workspace on current monitor
-bind = $mainMod, TAB, workspace, previous        # Toggle between current and previous workspace
-bind = $mainMod, grave, focusmonitor, +1        # Focus next monitor (grave is ` key)
+# Multi-monitor workspace navigation
+bind = $mainMod, bracketleft, workspace, m-1       # Previous workspace on current monitor
+bind = $mainMod, bracketright, workspace, m+1      # Next workspace on current monitor
+bind = $mainMod, TAB, workspace, previous          # Toggle between current and previous workspace
+bind = $mainMod, grave, focusmonitor, +1           # Focus next monitor
 
-# Move window to workspace (enhanced)
+# Move window to workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -97,149 +78,31 @@ bind = $mainMod SHIFT, grave, movecurrentworkspacetomonitor, +1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Enhanced mouse workspace cycling (monitor-aware)
-bind = $mainMod, mouse_down, workspace, m+1     # Next workspace on current monitor
-bind = $mainMod, mouse_up, workspace, m-1       # Previous workspace on current monitor
-bind = $mainMod CTRL, mouse_down, workspace, e+1  # Next workspace globally
-bind = $mainMod CTRL, mouse_up, workspace, e-1    # Previous workspace globally
+# Mouse workspace cycling (monitor-aware)
+bind = $mainMod, mouse_down, workspace, m+1
+bind = $mainMod, mouse_up, workspace, m-1
+bind = $mainMod CTRL, mouse_down, workspace, e+1
+bind = $mainMod CTRL, mouse_up, workspace, e-1
 
 # Media and hardware keys
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
-bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bindel = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+bindel = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+bindel = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 bindel = , XF86CapsLock, exec, swayosd-client --caps-lock
 
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-bindel = , XF86PowerOff, exec, wlogout
-
+bindel = , XF86PowerOff, exec, systemctl suspend
 
 # Window resizing
-# Grow windows
 bind = $mainMod, KP_Add, resizeactive, 20 20
 binde = $mainMod SHIFT, right, resizeactive, 20 0
 binde = $mainMod SHIFT, down, resizeactive, 0 20
-# Shrink window
 bind = $mainMod, KP_Subtract, resizeactive, -20 -20
 binde = $mainMod SHIFT, left, resizeactive, -20 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -20
-
-# === Window Management ===
-bind = $mainMod, Q, killactive
-bind = $mainMod, F, fullscreen, 1
-bind = $mainMod SHIFT, F, fullscreen, 0
-bind = $mainMod SHIFT, T, togglefloating
-bind = $mainMod, W, togglegroup
-
-# === Focus Navigation ===
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, J, movefocus, d
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, L, movefocus, r
-
-# === Window Movement ===
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, down, movewindow, d
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, J, movewindow, d
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, L, movewindow, r
-
-# === Column Navigation ===
-bind = $mainMod, Home, focuswindow, first
-bind = $mainMod, End, focuswindow, last
-
-# === Monitor Navigation ===
-bind = $mainMod CTRL, left, focusmonitor, l
-bind = $mainMod CTRL, right, focusmonitor, r
-bind = $mainMod CTRL, H, focusmonitor, l
-bind = $mainMod CTRL, J, focusmonitor, d
-bind = $mainMod CTRL, K, focusmonitor, u
-bind = $mainMod CTRL, L, focusmonitor, r
-
-# === Move to Monitor ===
-bind = $mainMod SHIFT CTRL, left, movewindow, mon:l
-bind = $mainMod SHIFT CTRL, down, movewindow, mon:d
-bind = $mainMod SHIFT CTRL, up, movewindow, mon:u
-bind = $mainMod SHIFT CTRL, right, movewindow, mon:r
-bind = $mainMod SHIFT CTRL, H, movewindow, mon:l
-bind = $mainMod SHIFT CTRL, J, movewindow, mon:d
-bind = $mainMod SHIFT CTRL, K, movewindow, mon:u
-bind = $mainMod SHIFT CTRL, L, movewindow, mon:r
-
-# === Workspace Navigation ===
-bind = $mainMod, Page_Down, workspace, e+1
-bind = $mainMod, Page_Up, workspace, e-1
-bind = $mainMod, U, workspace, e+1
-bind = $mainMod, I, workspace, e-1
-bind = $mainMod CTRL, down, movetoworkspace, e+1
-bind = $mainMod CTRL, up, movetoworkspace, e-1
-bind = $mainMod CTRL, U, movetoworkspace, e+1
-bind = $mainMod CTRL, I, movetoworkspace, e-1
-
-# === Move Workspaces ===
-bind = $mainMod SHIFT, Page_Down, movetoworkspace, e+1
-bind = $mainMod SHIFT, Page_Up, movetoworkspace, e-1
-bind = $mainMod SHIFT, U, movetoworkspace, e+1
-bind = $mainMod SHIFT, I, movetoworkspace, e-1
-
-# === Mouse Wheel Navigation ===
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod CTRL, mouse_down, movetoworkspace, e+1
-bind = $mainMod CTRL, mouse_up, movetoworkspace, e-1
-
-# === Numbered Workspaces ===
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-
-# === Move to Numbered Workspaces ===
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-
-# === Column Management ===
-bind = $mainMod, bracketleft, layoutmsg, preselect l
-bind = $mainMod, bracketright, layoutmsg, preselect r
-
-# === Sizing & Layout ===
-bind = $mainMod, R, layoutmsg, togglesplit
-bind = $mainMod CTRL, F, resizeactive, exact 100%
-
-# === Move/resize windows with mainMod + LMB/RMB and dragging ===
-bindmd = $mainMod, mouse:272, Move window, movewindow
-bindmd = $mainMod, mouse:273, Resize window, resizewindow
-
-# === Move/resize windows with mainMod + LMB/RMB and dragging ===
-bindd = $mainMod, code:20, Expand window left, resizeactive, -100 0
-bindd = $mainMod, code:21, Shrink window left, resizeactive, 100 0
-
-# === Manual Sizing ===
-binde = $mainMod, minus, resizeactive, -10% 0
-binde = $mainMod, equal, resizeactive, 10% 0
-binde = $mainMod SHIFT, minus, resizeactive, 0 -10%
-binde = $mainMod SHIFT, equal, resizeactive, 0 10%
