--- a/hypr/modules/rules.conf
+++ b/hypr/modules/rules.conf
@@ -1,48 +1,55 @@
+### WINDOW RULES ###
 
-### WINDOWS AND WORKSPACES ###
+# Zoom menu window
+windowrule = match:class zoom, match:title (menu window), stay_focused on
+
 # Suppress maximize event for all windows
-# windowrule = match:class zoom, match:title menu window, stay_focused on
-windowrule = match:class .*, suppress_event maximize
+windowrule = match:class .*, suppress_event = maximize
 
 # Prevent focus on empty, floating, non-fullscreen, non-pinned XWayland windows
-windowrule = match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0, no_focus on
+windowrule = match:class ^$, match:title ^$, no_focus on
 
-# Always float Picture-in-Picture windows, never tile them
-# windowrule = match:class ^(?!.*)$, tile on # Dummy rule to ensure only PiP floats, not tiles
+# Screenshot selection tool (slurp) - always on top
+windowrule = match:class ^(slurp)$, float on
+windowrule = match:class ^(slurp)$, fullscreen on
+windowrule = match:class ^(slurp)$, pin on
 
+# Clipboard manager
+windowrule = match:class clipse, float on
+windowrule = match:class clipse, size 622 652
+windowrule = match:class clipse, stay_focused on
 
-# GNOME Calendar window rules
-#windowrule = match:title ^(Calendar)$, float on
-#windowrule = match:title ^(Calendar)$, pin on
-#windowrule = match:title ^(Calendar)$, size 400 400
-#windowrule = match:title ^(Calendar)$, move 39% 12%
+# Picture-in-Picture
+windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
 
+# XWayland video bridge
 windowrule = match:class ^(xwaylandvideobridge)$, opacity 0.0 override
 windowrule = match:class ^(xwaylandvideobridge)$, no_anim on
 windowrule = match:class ^(xwaylandvideobridge)$, no_initial_focus on
 windowrule = match:class ^(xwaylandvideobridge)$, max_size 1 1
 windowrule = match:class ^(xwaylandvideobridge)$, no_blur on
 windowrule = match:class ^(xwaylandvideobridge)$, no_focus on
-windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
-windowrule = match:class ^(org\.wezfurlong\.wezterm)$, tile on
 
+# GNOME Calendar
+windowrule = match:title ^(Calendar)$, float on
+windowrule = match:title ^(Calendar)$, pin on
+windowrule = match:title ^(Calendar)$, size 400 400
+windowrule = match:title ^(Calendar)$, move 39% 12%
+
+# GNOME apps
 windowrule = match:class ^(org\.gnome\.), rounding 12
 windowrule = match:class ^(org\.gnome\.), decorate off
 
+# Force tiled
 windowrule = match:class ^(gnome-control-center)$, tile on
 windowrule = match:class ^(pavucontrol)$, tile on
 windowrule = match:class ^(nm-connection-editor)$, tile on
 
-#windowrule = match:class ^(gnome-calculator)$, float on
-#windowrule = match:class ^(galculator)$, float on
+# Force floating
 windowrule = match:class ^(blueman-manager)$, float on
-#windowrule = match:class ^(org\.gnome\.Nautilus)$, float on
-#windowrule = match:class ^(steam)$, float on
 windowrule = match:class ^(xdg-desktop-portal)$, float on
-
-windowrule = match:class ^(zen)$, decorate off
-windowrule = match:class ^(kitty)$, decorate off
 windowrule = match:class ^(zoom)$, float on
 
-# DMS windows floating by default
-windowrule = match:float 0, match:focus 0, opacity 0.9 0.9
+# Decorations
+windowrule = match:class ^(zen)$, decorate off
+windowrule = match:class ^(kitty)$, decorate off
