--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,340 +1,8 @@
-### MONITORS ###
-# Use preferred settings for built-in display, and auto-detect for others
-monitor = eDP-1, preferred, 0x0, 1
-monitor = , preferred, auto, 1
-#monitor = DP-4, preferred, auto, 1, transform, 1
-
-### PROGRAM SHORTCUTS ###
-$terminal      = kitty
-$fileManager   = nautilus
-$menu          = vicinae toggle
-$browser       = firefox
-$clipboard     = clipse -e clipse
-$colorpicker   = hyprpicker -a
-$mainMod       = SUPER
-$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
-$notification  = swaync-client -t -sw
-$screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
-$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
-$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
-
-### ENVIRONMENT VARIABLES ###
-env = XCURSOR_SIZE, 24
-env = HYPRCURSOR_SIZE, 24
-env = GTK_THEME,Adwaita:dark
-
-### LOOK AND FEEL ###
-general {
-    gaps_in             = 4
-    gaps_out            = 4
-    border_size         = 4
-    col.active_border   = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    allow_tearing       = false
-    resize_on_border    = true
-    layout              = dwindle
-}
-
-
-misc {
-    force_default_wallpaper     = -1
-    disable_hyprland_logo       = true
-    # Multi-monitor workspace improvements
-    disable_autoreload          = false
-    mouse_move_enables_dpms     = true
-    key_press_enables_dpms      = true
-    always_follow_on_dnd        = true
-    layers_hog_keyboard_focus   = true
-    animate_manual_resizes      = false
-    disable_splash_rendering    = true
-    focus_on_activate           = false
-    enable_swallow              = true
-    swallow_regex               = ^(Alacritty|kitty|footclient)$
-}
-
-# Hardware cursor for better gaming performance
-cursor {
-    no_hardware_cursors = false
-}
-
-decoration {
-    rounding         = 10
-    rounding_power   = 2
-    active_opacity   = 1
-    inactive_opacity = 0.95
-    shadow {
-        enabled      = true
-        range        = 6
-        render_power = 3
-        color        = rgba(1a1a1aee)
-    }
-    blur {
-        enabled   = true
-        size      = 4
-        passes    = 2
-        vibrancy  = 0.18
-    }
-}
-
-animations {
-    enabled = true
-    bezier = easeOutQuint, 0.23, 1, 0.32, 1
-    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear, 0, 0, 1, 1
-    bezier = almostLinear, 0.5, 0.5, 0.75, 1.0
-    bezier = quick, 0.15, 0, 0.1, 1
-    animation = global, 1, 8, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.5, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
-}
-
-# To reload Hyprland config after changes, run:
-# hyprctl reload
-
-dwindle {
-    pseudotile      = true
-    preserve_split  = true
-}
-
-master {
-    new_on_top = true
-    new_status = master
-}
-
-
-### INPUT ###
-input {
-    kb_layout    = ee
-    kb_variant   = nodeadkeys
-    kb_model     = latitude
-    kb_options   =
-    kb_rules     =
-    follow_mouse = 1
-    sensitivity  = 0
-    repeat_rate  = 25
-    repeat_delay = 300
-    touchpad {
-        natural_scroll = true
-        tap-to-click  = true
-        clickfinger_behavior = true
-        middle_button_emulation = true
-    }
-}
-
-gestures {
-    workspace_swipe_distance = 500
-    workspace_swipe_invert = true
-    workspace_swipe_min_speed_to_force = 30
-    workspace_swipe_cancel_ratio = 0.5
-    workspace_swipe_forever = true
-    gesture = 3, horizontal, workspace
-    gesture = 4, vertical, fullscreen
-   # gesture = 3, up, close
-}
-
-device {
-    name        = epic-mouse-v1
-    sensitivity = -0.5
-}
-
-xwayland {
-  enabled = true
-  force_zero_scaling = true
-}
-
-### KEYBINDINGS ###
-
-# Application launchers and system actions
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, L, exec, $lockscreen
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, G, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, Space, exec, vicinae toggle
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
-bind = $mainMod, N, exec, $notification,
-bind = $mainMod, V, exec, $terminal --class $clipboard
-bind = $mainMod, C, exec, $colorpicker
-bind = $mainMod SHIFT, UP, fullscreenstate, 1
-bind = $mainMod SHIFT, N, exec, $externalscript2
-bind = Alt, Tab, cyclenext, prev
-bind = $mainMod SHIFT, S, exec, $screenshot
-bind = $mainMod CTRL SHIFT, S, exec, $screenshotocr
-bind = $mainMod SHIFT, A, exec, grim -g "$(slurp -d)" - | swappy -f -
-bind = $mainMod, B, exec, $externalscript1
-
-# Expo plugin keybindings
-# bind = $mainMod, E, hyprexpo:expo, toggle
-#bind = $mainMod, grave, hyprexpo:expo, toggle
-
-# utility
-bind = $mainMod SHIFT, V, exec, bash /home/ghost/.config/scripts/wayvnc-toggle.sh
-bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
-bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
-# bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2  # Disabled - duplicate keybinding
-bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2  # Changed to SUPER+SHIFT+B
-
-
-# Focus movement
-bind = $mainMod CTRL, left, movefocus, l
-bind = $mainMod CTRL, right, movefocus, r
-bind = $mainMod CTRL, down, movefocus, d
-bind = $mainMod CTRL, up, movefocus, u
-bind = $mainMod, left, movewindow, l
-bind = $mainMod, right, movewindow, r
-
-bind = $mainMod, up, movewindow, u
-bind = $mainMod, down, movewindow, d
-
-# Workspace switching
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Enhanced multi-monitor workspace navigation
-bind = $mainMod, bracketleft, workspace, m-1    # Previous workspace on current monitor
-bind = $mainMod, bracketright, workspace, m+1   # Next workspace on current monitor
-bind = $mainMod, TAB, workspace, previous        # Toggle between current and previous workspace
-bind = $mainMod, grave, focusmonitor, +1        # Focus next monitor (grave is ` key)
-
-# Move window to workspace (enhanced)
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Move window to adjacent workspace on current monitor
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, m-1
-bind = $mainMod SHIFT, bracketright, movetoworkspace, m+1
-
-# Move window to next monitor
-bind = $mainMod SHIFT, grave, movecurrentworkspacetomonitor, +1
-
-# Mouse bindings
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Enhanced mouse workspace cycling (monitor-aware)
-bind = $mainMod, mouse_down, workspace, m+1     # Next workspace on current monitor
-bind = $mainMod, mouse_up, workspace, m-1       # Previous workspace on current monitor
-bind = $mainMod CTRL, mouse_down, workspace, e+1  # Next workspace globally
-bind = $mainMod CTRL, mouse_up, workspace, e-1    # Previous workspace globally
-
-# Media and hardware keys
-# bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-# bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-# bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-# bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-# bindel = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-# bindel = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-bindel = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bindel = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bindel = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindel = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
-bindel = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
-bindel = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
-bindel = , XF86CapsLock, exec, swayosd-client --caps-lock
-
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-bindel = , XF86PowerOff, exec, systemctl suspend
-
-# Laptop lid switch handler
-#bindl = , switch:Lid Switch, exec, $lockscreen
-bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
-bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, preferred, 0x0, 1"
-
-# Window resizing
-# Grow windows
-bind = $mainMod, KP_Add, resizeactive, 20 20
-binde = $mainMod SHIFT, right, resizeactive, 20 0
-binde = $mainMod SHIFT, down, resizeactive, 0 20
-# Shrink window
-bind = $mainMod, KP_Subtract, resizeactive, -20 -20
-binde = $mainMod SHIFT, left, resizeactive, -20 0
-binde = $mainMod SHIFT, up, resizeactive, 0 -20
-
-### WINDOWS AND WORKSPACES ###
-# Zoom menu window rules
-windowrule = match:class zoom, match:title (menu window), stay_focused on
-
-# Suppress maximize event for all windows
-windowrule = match:class .*, suppress_event = maximize
-
-# Prevent focus on empty, floating, non-fullscreen, non-pinned XWayland windows (simplified)
-windowrule = match:class ^$, match:title ^$, no_focus on
-
-# Always float Picture-in-Picture windows, never tile them
-windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
-
-# Screenshot selection tool (slurp) - always on top
-windowrule = match:class ^(slurp)$, float on
-windowrule = match:class ^(slurp)$, fullscreen on
-windowrule = match:class ^(slurp)$, pin on
-#layerrule = match:namespace ^(slurp)$, noanim
-
-# Window rules for clipse clipboard manager
-windowrule = match:class clipse, float on
-windowrule = match:class clipse, size 622 652
-windowrule = match:class clipse, stay_focused on
-
-# GNOME Calendar window rules
-windowrule = match:title ^(Calendar)$, float on
-windowrule = match:title ^(Calendar)$, pin on
-windowrule = match:title ^(Calendar)$, size 400 400
-windowrule = match:title ^(Calendar)$, move 39% 12%
-
-# XWayland video bridge rules
-windowrule = match:class ^(xwaylandvideobridge)$, opacity 0.0 override
-windowrule = match:class ^(xwaylandvideobridge)$, no_anim on
-windowrule = match:class ^(xwaylandvideobridge)$, no_initial_focus on
-windowrule = match:class ^(xwaylandvideobridge)$, max_size 1 1
-windowrule = match:class ^(xwaylandvideobridge)$, no_blur on
-windowrule = match:class ^(xwaylandvideobridge)$, no_focus on
-
-### WORKSPACE RULES FOR MULTI-MONITOR ###
-# Assign workspaces to specific monitors
-workspace = 1, monitor:eDP-1, default:true
-workspace = 2, monitor:eDP-1
-workspace = 3, monitor:eDP-1
-workspace = 4, monitor:eDP-1
-workspace = 5, monitor:eDP-1
-workspace = 6, monitor:DP-4
-workspace = 7, monitor:DP-4
-workspace = 8, monitor:DP-4
-workspace = 9, monitor:DP-4
-workspace = 10, monitor:DP-4
-
-# Workspace switching
+source = ~/.config/hypr/modules/monitors.conf
+source = ~/.config/hypr/modules/autostart.conf
+source = ~/.config/hypr/modules/general.conf
+source = ~/.config/hypr/modules/appearance.conf
+source = ~/.config/hypr/modules/input.conf
+source = ~/.config/hypr/modules/gestures.conf
+source = ~/.config/hypr/modules/keys.conf
+source = ~/.config/hypr/modules/rules.conf
