--- a/hypr/modules/input.conf
+++ b/hypr/modules/input.conf
@@ -9,9 +9,19 @@ input {
     repeat_rate  = 25
     repeat_delay = 300
     touchpad {
-        natural_scroll = true
-        tap-to-click  = true
-        clickfinger_behavior = true
+        natural_scroll          = true
+        tap-to-click            = true
+        clickfinger_behavior    = true
         middle_button_emulation = true
     }
+}
+
+device {
+    name        = epic-mouse-v1
+    sensitivity = -0.5
+}
+
+xwayland {
+    enabled            = true
+    force_zero_scaling = true
 }
