Replace hardcoded /home/ghost paths and remove dead script
All /home/ghost/.config/ references replaced with ~/.config/ in Hyprland
configs and $HOME/.config/ in shell scripts. ~/Documents paths used for
external script keybindings. Removed toggle-internal-display.sh which
was unused (lid switch handles this via hyprctl keyword in monitors.conf).

--- a/gtklock/config.ini
+++ b/gtklock/config.ini
@@ -1,6 +1,6 @@
 [main]
 modules=/usr/lib64/gtklock/userinfo-module.so;/usr/lib64/gtklock/playerctl-module.so
-style=/home/ghost/.config/gtklock/style.css
+style=~/.config/gtklock/style.css
 time-format=%H:%M
 date-format=%A, %d %B
 background=/mnt/DATA/Home_Folders/Pictures/wallpapers/Dark_Nature_blurred.png
