--- a/hypr/modules/general.conf
+++ b/hypr/modules/general.conf
@@ -6,12 +6,12 @@ $browser       = firefox
 $clipboard     = clipse -e clipse
 $colorpicker   = hyprpicker -a
 $mainMod       = SUPER
-$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
+$lockscreen    = gtklock -c ~/.config/gtklock/config.ini
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
-$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
-$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
+$screenshotocr = bash ~/.config/scripts/screenshot-ocr.sh
+$externalscript1 = bash ~/.config/scripts/restart.sh
+$externalscript2 = bash ~/.config/scripts/wallpaper.sh
 
 general {
     gaps_in             = 4
