--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -22,10 +22,10 @@ bind = $mainMod SHIFT, A, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, B, exec, $externalscript1
 
 # Utility
-bind = $mainMod SHIFT, V, exec, bash /home/ghost/.config/scripts/wayvnc-toggle.sh
-bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
-bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
-bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
+bind = $mainMod SHIFT, V, exec, bash ~/.config/scripts/wayvnc-toggle.sh
+bind = $mainMod SHIFT, M, exec, python3 ~/Documents/Code/linux-sysutil/cli_tool.py media start
+bind = $mainMod SHIFT, K, exec, python3 ~/Documents/Code/linux-sysutil/cli_tool.py media stop
+bind = $mainMod SHIFT, B, exec, python3 ~/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
 
 # Focus movement
 bind = $mainMod CTRL, left, movefocus, l
