--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -3,4 +3,4 @@ env = HYPRCURSOR_SIZE, 24
 env = GTK_THEME,Adwaita:dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
-exec-once = bash /home/ghost/.config/scripts/restart.sh
+exec-once = bash ~/.config/scripts/restart.sh
